@@ -172,6 +172,7 @@ class SearcherABC:
         ('<', '&lt;'),
         ('>', '&gt;'),
         ('"', '&quot;'),
+        ('"', '&#34;'),
         ("'", '&#39;'),
         ("&", '&#38;'),
         ("'", '&#039;'),
