@@ -36,7 +36,7 @@
         <setting id="torrent_dir"                   type="text"         label="50304"/>
         <setting id="torrent_replacement"           type="folder"       label="30426"/>
         <setting type="sep"/>
-        <setting id="torrent"                       type="enum"         label="50311" values="µTorrent WebUI|Transmission|Vuze (XML over HTTP plugin)|Deluge WebUI"
+        <setting id="torrent"                       type="enum"         label="50311" values="µTorrent WebUI|Transmission|Vuze (XML over HTTP plugin)|Deluge|qBittorent"
                  default="0"/>
         <setting id="torrent_utorrent_host"         type="ipaddress"    label="50312" visible="eq(-1,0)" default="127.0.0.1"/>
         <setting id="torrent_utorrent_port"         type="number"       label="50313" visible="eq(-2,0)" default="8080"/>
@@ -57,5 +57,9 @@
         <setting id="torrent_deluge_path"           type="text"         label="50317" visible="eq(-15,3)" default="/"/>
         <setting id="torrent_deluge_port"           type="number"       label="50313" visible="eq(-16,3)" default="8112"/>
         <setting id="torrent_deluge_password"       type="text"         label="50316" visible="eq(-17,3)" default="deluge" option="hidden"/>
+        <setting id="torrent_qbittorrent_host"      type="ipaddress"    label="50312" visible="eq(-18,4)" default="127.0.0.1"/>
+        <setting id="torrent_qbittorrent_port"      type="number"       label="50313" visible="eq(-19,4)" default="8080"/>
+        <setting id="torrent_qbittorrent_login"     type="text"         label="50315" visible="eq(-20,4)" default="admin"/>
+        <setting id="torrent_qbittorrent_password"  type="text"         label="50316" visible="eq(-21,4)" default="admin" option="hidden"/>
     </category>
 </settings>
